Ändrat lite i koden samt stylat

--- a/style.css
+++ b/style.css
@@ -6,6 +6,14 @@ body {
     margin: 0;
 }
 
+#cal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:rgba(255, 255, 255, 0.39);
+    font-size: 100px;
+}
+
 /* STOR CONTAINER/BAKGRUND */
 #container {
     width: 1280px;
@@ -13,17 +21,15 @@ body {
     background-color: rgba(128, 128, 128, 0.219);
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
-
 }
 
 /* BAKGRUND MINIRÄKNARE  */
 #calculator {
     display: flex;
-    width: 300px;
-    height: 400px;
-    background-color: white;
+    width: 250px;
+    height: 350px;
+    background-color: rgb(3, 15, 49);
     border-radius: 5px;
     box-shadow: 4px 4px rgba(97, 94, 94, 0.932);
     margin-top: 60px;
@@ -36,12 +42,14 @@ body {
 /* RUTA SOM VISAR SIFFROR */
 #input {
     display: flex;
-    height: 100px;
-    width: 290px;
-    background-color: khaki;
+    height: px;
+    width: 230px;
+    background-color: rgb(255, 255, 255);
     flex-direction: column;
     border-width: -5px;
     text-align: right;
+    font-size: 50px;
+    border: none;
 }
 
 /* HÄR FINNS ALLA SIFFOR / TANGENTER */
@@ -63,6 +71,8 @@ body {
     margin: 10px;
     border-width: -5px;
     font-weight: bold;
-    font-size: 12px;
+    font-size: 15px;
+    background-color: rgb(255, 255, 255);
+    border-style: none;  
    
 }
